# Full-Stack-ToDo-WebApp-with-Chatbot

./: CHATBOT_IMPROVEMENTS.md  RUNNING_INSTRUCTIONS.md  restart_services.bat  test_comprehensive_chatbot.py  test_enhanced_chatbot.py
.claude/: settings.local.json
.claude/agents/: adr-tracker_backend.md  ai-agent-engineer.md  arch-decision-tracker.md  auth-checker.md  auth-manager.md  chat-backend-engineer.md  chatbot-spec-writer.md  (+8 more)
backend/: .gitignore  README.md  better_auth_config.py  debug_run.py  debug_server.py  main.py  minimal_model.py  minimal_server.py  pyproject.toml  requirements.txt  run_server.py  simple_model.py  simple_server.py  simple_server2.py  sqlalchemy_model.py  start_server.bat  test_db_connection.py  test_model.py  test_server.py  working_model.py
backend/app/chatbot/: __init__.py  agent.py  agent_route.py  logger.py  routes.py
backend/core/: config.py  dependencies.py  security.py
backend/db/: init.py  session.py
backend/mcp/: README.md  __init__.py  main.py  requirements.txt  setup.py  test_mcp_server.py
backend/mcp/core/: config.py  server.py
backend/mcp/tools/: __init__.py  task_tools.py
backend/mcp/utils/: helpers.py
backend/models/: base.py  conversation.py  message.py  task.py  user.py
backend/routes/: auth.py  tasks.py
backend/schemas/: chat.py  conversation.py  task.py
backend/tests/: test_integration.py
backend/utils/: password_utils.py
frontend/: .gitignore  i18n.js  middleware.ts  navigation-test.js  package-lock.json  package.json  responsive-test.js  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
(+83 files in other folders)
